<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.urbanlotusproject.android.urbanlotusproject.MainActivity">
    <LinearLayout
        style="@style/layoutParent">
        <RelativeLayout
            style="@style/layoutChild">
            <TextView
                style="@style/introTextStyle"
                android:text="@string/introText"
                />
        </RelativeLayout>
        <LinearLayout
            style="@style/layoutChild">
            <EditText
                android:id="@+id/userInitials"
                style="@style/editTextStyle"
                android:inputType="textCapCharacters"
                android:hint="@string/initials"
                android:maxLength="4"
                />
            <EditText
                android:id="@+id/userAge"
                style="@style/editTextStyle"
                android:inputType="number"
                android:hint="@string/age"
                />
            <Spinner
                android:id="@+id/gender"
                style="@style/editTextStyle"
                android:hint="@string/userGender" />
        </LinearLayout>
        <LinearLayout
            style="@style/layoutChild">
            <TextView
                style="@style/standardTheme"
                android:text="@string/race" />
            <CheckBox
                android:id="@+id/checkbox_race_native"
                style="@style/checkBoxTheme"
                android:text="@string/nativeAmerican"
                android:onClick="onCheckBoxClicked"
                />
            <CheckBox
                android:id="@+id/checkbox_race_asian"
                style="@style/checkBoxTheme"
                android:text="@string/asian"
                android:onClick="onCheckBoxClicked"
                />
        </LinearLayout>
        <LinearLayout
            style="@style/layoutChild">
            <CheckBox
                android:id="@+id/checkbox_race_black"
                style="@style/checkBoxTheme"
                android:text="@string/black"
                android:onClick="onCheckBoxClicked"
                />
            <CheckBox
                android:id="@+id/checkbox_race_islander"
                style="@style/checkBoxTheme"
                android:text="@string/islander"
                android:onClick="onCheckBoxClicked"
                />
        </LinearLayout>
        <LinearLayout
            style="@style/layoutChild">
            <CheckBox
                android:id="@+id/checkbox_race_white"
                style="@style/checkBoxTheme"
                android:text="@string/white"
                android:onClick="onCheckBoxClicked"
                />
            <CheckBox
                android:id="@+id/checkbox_race_other"
                style="@style/checkBoxTheme"
                android:text="@string/other"
                android:onClick="onCheckBoxClicked"
                />
        </LinearLayout>
        <LinearLayout
            style="@style/layoutChild">
            <TextView
                style="@style/standardTheme"
                android:text="@string/ethnicity" />
            <CheckBox
                android:id="@+id/checkbox_ethnicity_latino"
                style="@style/checkBoxTheme"
                android:text="@string/latino"
                android:onClick="onCheckBoxClicked"
                />
            <CheckBox
                android:id="@+id/checkbox_ethnicity_not_latino"
                style="@style/checkBoxTheme"
                android:text="@string/noLatino"
                android:onClick="onCheckBoxClicked"
                />
        </LinearLayout>
        <LinearLayout
            style="@style/layoutChild">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/scale"
                android:padding="20dp"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            style="@style/layoutChild">
            <TextView
                style="@style/layoutQuestions"
                android:text="@string/question1"/>
        </LinearLayout>
        <LinearLayout
            style="@style/layoutRadio">
            <RadioGroup
                android:id="@+id/q1_group"
                style="@style/layoutRadio">
                <RadioButton
                    android:id="@+id/q1_0"
                    style="@style/radioButtons"
                    android:onClick="questionOneAnswered"
                    android:text="@string/zero"
                    />
                <RadioButton
                    android:id="@+id/q1_1"
                    style="@style/radioButtons"
                    android:onClick="questionOneAnswered"
                    android:text="@string/one"/>
                <RadioButton
                    android:id="@+id/q1_2"
                    style="@style/radioButtons"
                    android:onClick="questionOneAnswered"
                    android:text="@string/two"/>
                <RadioButton
                    android:id="@+id/q1_3"
                    style="@style/radioButtons"
                    android:onClick="questionOneAnswered"
                    android:text="@string/three"/>
                <RadioButton
                    android:id="@+id/q1_4"
                    style="@style/radioButtons"
                    android:onClick="questionOneAnswered"
                    android:text="@string/four"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            style="@style/layoutChild">
            <TextView
                style="@style/layoutQuestions"
                android:text="@string/question2"/>
        </LinearLayout>
        <LinearLayout
            style="@style/layoutRadio">
            <RadioGroup
                android:id="@+id/q2_group"
                style="@style/layoutRadio">
                <RadioButton
                    android:id="@+id/q2_0"
                    style="@style/radioButtons"
                    android:onClick="questionTwoAnswered"
                    android:text="@string/zero"
                    />
                <RadioButton
                    android:id="@+id/q2_1"
                    style="@style/radioButtons"
                    android:onClick="questionTwoAnswered"
                    android:text="@string/one"/>
                <RadioButton
                    android:id="@+id/q2_2"
                    style="@style/radioButtons"
                    android:onClick="questionTwoAnswered"
                    android:text="@string/two"/>
                <RadioButton
                    android:id="@+id/q2_3"
                    style="@style/radioButtons"
                    android:onClick="questionTwoAnswered"
                    android:text="@string/three"/>
                <RadioButton
                    android:id="@+id/q2_4"
                    style="@style/radioButtons"
                    android:onClick="questionTwoAnswered"
                    android:text="@string/four"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            style="@style/layoutChild">
            <TextView
                style="@style/layoutQuestions"
                android:text="@string/question3"/>
        </LinearLayout>
        <LinearLayout
            style="@style/layoutRadio">
            <RadioGroup
                android:id="@+id/q3_group"
                style="@style/layoutRadio">
                <RadioButton
                    android:id="@+id/q3_0"
                    style="@style/radioButtons"
                    android:onClick="questionThreeAnswered"
                    android:text="@string/zero"
                    />
                <RadioButton
                    android:id="@+id/q3_1"
                    style="@style/radioButtons"
                    android:onClick="questionThreeAnswered"
                    android:text="@string/one"/>
                <RadioButton
                    android:id="@+id/q3_2"
                    style="@style/radioButtons"
                    android:onClick="questionThreeAnswered"
                    android:text="@string/two"/>
                <RadioButton
                    android:id="@+id/q3_3"
                    style="@style/radioButtons"
                    android:onClick="questionThreeAnswered"
                    android:text="@string/three"/>
                <RadioButton
                    android:id="@+id/q3_4"
                    style="@style/radioButtons"
                    android:onClick="questionThreeAnswered"
                    android:text="@string/four"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            style="@style/layoutChild">
            <TextView
                style="@style/layoutQuestions"
                android:text="@string/question4"/>
        </LinearLayout>
        <LinearLayout
            style="@style/layoutRadio">
            <RadioGroup
                android:id="@+id/q4_group"
                style="@style/layoutRadio">
                <RadioButton
                    android:id="@+id/q4_0"
                    style="@style/radioButtons"
                    android:onClick="questionFourAnswered"
                    android:text="@string/zero"
                    />
                <RadioButton
                    android:id="@+id/q4_1"
                    style="@style/radioButtons"
                    android:onClick="questionFourAnswered"
                    android:text="@string/one"/>
                <RadioButton
                    android:id="@+id/q4_2"
                    style="@style/radioButtons"
                    android:onClick="questionFourAnswered"
                    android:text="@string/two"/>
                <RadioButton
                    android:id="@+id/q4_3"
                    style="@style/radioButtons"
                    android:onClick="questionFourAnswered"
                    android:text="@string/three"/>
                <RadioButton
                    android:id="@+id/q4_4"
                    style="@style/radioButtons"
                    android:onClick="questionFourAnswered"
                    android:text="@string/four"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            style="@style/layoutChild">
            <TextView
                style="@style/layoutQuestions"
                android:text="@string/question5"/>
        </LinearLayout>
        <LinearLayout
            style="@style/layoutRadio">
            <RadioGroup
                android:id="@+id/q5_group"
                style="@style/layoutRadio">
                <RadioButton
                    android:id="@+id/q5_0"
                    style="@style/radioButtons"
                    android:onClick="questionFiveAnswered"
                    android:text="@string/zero"
                    />
                <RadioButton
                    android:id="@+id/q5_1"
                    style="@style/radioButtons"
                    android:onClick="questionFiveAnswered"
                    android:text="@string/one"/>
                <RadioButton
                    android:id="@+id/q5_2"
                    style="@style/radioButtons"
                    android:onClick="questionFiveAnswered"
                    android:text="@string/two"/>
                <RadioButton
                    android:id="@+id/q5_3"
                    style="@style/radioButtons"
                    android:onClick="questionFiveAnswered"
                    android:text="@string/three"/>
                <RadioButton
                    android:id="@+id/q5_4"
                    style="@style/radioButtons"
                    android:onClick="questionFiveAnswered"
                    android:text="@string/four"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            style="@style/layoutChild">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/submitButton"
                android:onClick="submitButtonClicked"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
